--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
   <![endif]-->
 
   <!-- Add your site or application content here -->
-  <div class="message-form">
+  <form class="message-form">
     <section class="personal-info-section">
       <div class="input-group">
         <label for="user-name" class="input-group__label">Name</label>
@@ -47,7 +47,7 @@
     <section class="button-section">
       <button class="button--primary" type="submit">Send</button>
     </section>
-  </div>
+  </form>
   <script src="js/vendor/modernizr-{{MODERNIZR_VERSION}}.min.js"></script>
   <script src="https://code.jquery.com/jquery-{{JQUERY_VERSION}}.min.js" integrity="{{JQUERY_SRI_HASH}}" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-{{JQUERY_VERSION}}.min.js"><\/script>')</script>
